--- a/front-end/src/components/Footer/FooterStyle.module.scss
+++ b/front-end/src/components/Footer/FooterStyle.module.scss
@@ -3,10 +3,11 @@
 .footerSection {
   @include elementsPadding();
   width: 100%;
-  height: 40vh;
+  height: auto;
   margin-top: 1rem;
   position: relative;
-  background: #d9d9d9;
+  padding: 60px 90px;
+  background: #e5e7e9;
 
   &__container {
     width: 100%;
@@ -15,22 +16,10 @@
 
     display: flex;
     justify-content: space-between;
-
-    &__documents {
-      @include flex();
+    @include breakpoint(md) {
       gap: 1rem;
-
-      &__content {
-        @include flex();
-        gap: 6px;
-        align-items: center;
-
-        p {
-          color: yellow;
-          display: flex;
-          align-items: center;
-        }
-      }
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 }
