--- a/front-end/src/components/Bag/BagStyle.module.scss
+++ b/front-end/src/components/Bag/BagStyle.module.scss
@@ -6,7 +6,7 @@
 
   &__titleSection {
     width: 100%;
-    height: auto;
+    height: 200px;
     position: relative;
     @include elementsPadding();
     background: url(./background.png);
@@ -28,9 +28,13 @@
 
   &__ordersSection {
     width: 100%;
+    padding: 0 90px;
+
     height: auto;
     position: relative;
-    padding: 0 90px;
+    align-items: flex-end;
+
+    @include flex();
 
     @include breakpoint(md) {
       padding: $pageSmallPadding;
@@ -46,14 +50,37 @@
 
     &__titles {
       width: 100%;
-      display: flex;
       padding-bottom: 1rem;
+
+      display: flex;
       justify-content: space-between;
       border-bottom: 1.5px solid #e5e8e8;
 
-      h4 {
-        @media (max-width: 720px) {
-          display: none;
+      @media (max-width: 1100px) {
+        display: none;
+      }
+
+      &__product {
+        width: 16%;
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        @media (max-width: 1300px) {
+          width: 25%;
+        }
+      }
+
+      &__title {
+        width: 16%;
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        @media (max-width: 1300px) {
+          width: 15%;
         }
       }
     }
@@ -61,6 +88,28 @@
     &__orders {
       width: 100%;
       @include flex();
+    }
+
+    &__totalSection {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      right: 0%;
+      width: 100%;
+      margin-top: 45px;
+
+      &__total {
+        gap: 185px;
+        display: flex;
+        align-items: center;
+        @include breakpoint(sm) {
+          gap: 0;
+          width: 100%;
+
+          justify-content: space-between;
+        }
+      }
     }
   }
 }
