--- a/front-end/src/components/Bag/BagStyle.module.scss
+++ b/front-end/src/components/Bag/BagStyle.module.scss
@@ -2,16 +2,22 @@
 
 .bagSection {
   width: 100vw;
-  height: auto;
+  padding-bottom: 100px;
 
+  height: auto;
   &__titleSection {
     width: 100%;
     height: 200px;
     position: relative;
+    background-size: contain;
     @include elementsPadding();
-    background: url(./background.png);
     background-position: center;
     background-repeat: no-repeat;
+    background: url(./background.png);
+
+    @include breakpoint(sm) {
+      background: url(./background2.png);
+    }
 
     &__title {
       font-size: 3rem;
@@ -28,7 +34,7 @@
 
   &__ordersSection {
     width: 100%;
-    padding: 0 90px;
+    padding: 80px 90px;
 
     height: auto;
     position: relative;
@@ -61,26 +67,26 @@
       }
 
       &__product {
-        width: 16%;
+        width: 43%;
 
         display: flex;
         align-items: center;
         justify-content: flex-start;
 
         @media (max-width: 1300px) {
-          width: 25%;
+          // width: 55%;
         }
       }
 
       &__title {
-        width: 16%;
+        width: 100%;
 
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: space-between;
 
         @media (max-width: 1300px) {
-          width: 15%;
+          // width: 15%;
         }
       }
     }
@@ -101,6 +107,7 @@
 
       &__total {
         gap: 185px;
+
         display: flex;
         align-items: center;
         @include breakpoint(sm) {
@@ -108,7 +115,52 @@
           width: 100%;
 
           justify-content: space-between;
+
+          p {
+            font-weight: 600;
+            font-size: 1.2rem;
+          }
         }
+      }
+    }
+
+    &__main_button_section {
+      gap: 30px;
+      width: 100%;
+      margin-top: 115px;
+
+      @include flex();
+      align-items: center;
+
+      button {
+        width: 500px;
+        height: 50px;
+        font-size: 18px;
+
+        color: #FFF;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #000;
+        font-family: Roboto;
+        font-style: Regular;
+        font-size: 18px;
+        line-height: 21px;
+        line-height: 100%;
+
+        @media (max-width: 830px) {
+          width: 100%;
+        }
+      }
+
+      p {
+        color: #8F8F8F;
+        font-family: Roboto;
+        font-style: Regular;
+
+        font-size: 18px;
+        line-height: 21px;
+        line-height: 100%;
       }
     }
   }
