--- a/front-end/src/components/Bag/BagStyle.module.scss
+++ b/front-end/src/components/Bag/BagStyle.module.scss
@@ -1,4 +1,4 @@
-@import "../styles/BagVariables.scss";
+@import "./styles/BagVariables.scss";
 
 .bagSection {
   width: 100vw;
@@ -9,7 +9,6 @@
     width: 100%;
     height: 200px;
     position: relative;
-    // background-size: contain;
     background-size: cover;
     @include elementsPadding();
     background-position: center;
@@ -138,7 +137,7 @@
         height: 50px;
         font-size: 18px;
 
-        color: #FFF;
+        color: #fff;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -155,7 +154,7 @@
       }
 
       p {
-        color: #8F8F8F;
+        color: #8f8f8f;
         font-family: Roboto;
         font-style: Regular;
 
